--- a/app/src/main/res/layout/activity_data_base.xml
+++ b/app/src/main/res/layout/activity_data_base.xml
@@ -48,4 +48,22 @@
         android:id="@+id/button4"
         android:text="Dialogo con lista de items" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button5"
+        android:text="Dialog Fragment" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button6"
+        android:text="Lista" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button7"
+        android:text="Logout" />
+
 </LinearLayout>
